2009-01-23  Giorgos Keramidas  <keramida@freebsd.org>  (tiny change)

	* alloc.c (mark_stack): Use "flushw" instead of "ta 3" assembly
	call for Sparc64.

2009-01-22  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsfns.m:
	* nsgui.h:
	* nsmenu.m:
	* nsselect.m:
	* nsterm.h:
	* nsterm.m: Remove '23' comments that indicated code added during
	update from emacs-20 -> emacs-23.

2009-01-22  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsterm.m (EmavsView-keyDown:): Treat nil as Qnone for
	ns_alternate_modifier.  (Bug#1217)

	* nsmenu.m (EmacsMenu-parseKeyEquiv:, addItemWithWidgetValue:):
	Display all shortcuts, including those w/o super modifier.

	* nsfns.m (ns-read-file-name): Fix typo in assignment statement.

2009-01-22  Chong Yidong  <cyd@stupidchicken.com>

	* fileio.c (Vwrite_region_post_annotation_function)
	(Vwrite_region_annotation_buffers): New vars.
	(build_annotations_unwind): Just reset
	Vwrite_region_annotation_buffers.
	(Fwrite_region): Initialize Vwrite_region_annotation_buffers.
	Call write-region-post-annotation-function.
	(build_annotations): Add to Vwrite_region_annotation_buffers if
	buffer changes.

2009-01-21  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsterm.h (EmacsApp-setAppleMenu:): Conditionalize more correctly on
	Tiger.
	* nsfns.m (ns_do_applescript): Conditionalize
	typeUTF16ExternalRepresentation on Tiger.

2009-01-21  Wolfgang Lux  <wolfgang.lux@gmail.com>  (tiny change)

	* nsterm.m (EV_TRAILER): Always use emacsframe for frame_or_window.

2009-01-21  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsmenu.m (NSMENUPROFILE): Change #if style.

	* nsterm.h (EmacsPrefsController): Add -setPanelFromDefaultValues.

	* nsterm.m (x_set_frame_alpha): Add prototype.
	(ns_fake_keydown, EmacsView-keyUp:): New variable and function to
	handle Ctrl-tab.  (Bug#1841)
	(ns_get_color): Use unsigned long long for scanned hex string value.
	(ns_term_shutdown): Abort on non SIGTERM signals.